K8S/platforms-depl.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: platforms-depl
spec:
  replicas: 1
  selector: # selecting the pod
    matchLabels:
      app: platformservice
  template: #defining and deploying pod we are going to use
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
      - name: platformservice
        image: zianzena/platformservice:latest
        ports:
          - containerPort: 5000
            name: plf-port-001
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: platforms-clip
spec:
  type: ClusterIP
  selector:
    app: platformservice
  ports:
    - name: plf-clip-001
      protocol: TCP
      port: 5000
      targetPort: 5000
